# linkl-frontend

./: app.py  pyproject.toml
.github/workflows/: codeql.yml
pages/: error.html  error_redirect.html  index.html
static/css/: error.css  index.css
