[tool.poetry]
name = "linkl-frontend"
version = "0.1.0"
description = ""
authors = ["smoo <tmddn3070@gmail.com>"]
readme = "README.md"
packages = [{include = "linkl_frontend"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["async"], version = "^2.2.2"}
requests = "^2.28.1"
httpx = "^0.23.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
hypercorn = "^0.14.3"
flask-cors = "^3.0.10"
fastapi = "^0.88.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
