[tool.poetry]
name = "linkl-frontend"
version = "0.1.0"
description = ""
authors = ["smoo <tmddn3070@gmail.com>"]
readme = "README.md"
packages = [{include = "linkl_frontend"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
httpx = "^0.23.2"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
